@@ -13,17 +13,16 @@
 
 #define AMAROK_EXPORT_PLUGIN( classname ) \
     extern "C" { \
-         classname* plugin_object; \
-         void* create_plugin() { plugin_object = new classname; return plugin_object; } \
-         void  delete_plugin() { delete plugin_object; } \
+         amaroK::Plugin* create_plugin() { return new classname; } \
     } 
- 
+    
 namespace amaroK {
     
 class Plugin
 {
     public:
         Plugin();
+        virtual ~Plugin();
 };
 
 } //namespace amaroK
